# sequencoder

./: LICENSE  pyproject.toml  sequencoder.py  sequencoder_transformer_axial_dec.py  sequencoder_transformer_coaxial.py  sim_and_embed.py
utils/: parse_data.py  simulate.py
