[project]
name = "sequencoder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "ruff>=0.15.6",
    "scikit-learn>=1.6.1",
    "tifffile>=2024.8.30",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "umap-learn>=0.5.11",
]
